# VendysWatch

./: Cargo.toml  audit_logs_20250428_101212.txt  audit_logs_20250428_101213.txt  audit_logs_20250428_101453.txt  audit_logs_20250428_101505.txt  audit_logs_20250428_101506.txt  audit_logs_20250428_101600.txt  audit_logs_20250428_101601.txt  audit_logs_20250428_102225.txt  file_integrity.db  integrity_log.txt  proposal.tex  requirements.txt  test.txt
src/: auditd.rs  database.rs  hashing.rs  logger.rs  main.rs  realtime_monitoring.rs  ui.rs
watch_dir/: asd.txt  ghazali.txt  salman.txt  test.txt  testew.txt
