[package]
name = "vendysWatch"
version = "0.1.0"
edition = "2024"

[dependencies]
notify = "5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = "1.0"
walkdir = "2.3"
chrono = "0.4"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
